Integrating server API

--- a/index.html
+++ b/index.html
@@ -14,10 +14,7 @@
             <h3> Focus on:</h3>
             <div>
                 <select name="nodes" id="nodes" onchange="changeNodeFocus(event)">
-                    <option value="1"> Javascript </option>
-                    <option value="8"> Drupal </option>
-                    <option value="16"> User 1 </option>
-                    <option value="7"> User 2 </option>
+                    <option value=""> Select Project </option>
                 </select>
             </div>
 
