focus zoom scale

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <h3> Focus on:</h3>
             <div>
                 <select name="nodes" id="nodes" onchange="changeNodeFocus(event)">
-                    <option value=""> Select Project </option>
+                    <option value=""> Select Option </option>
                 </select>
             </div>
 
